syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.model;

import "model/model.proto";
import "model/model_version.proto";
// this line is used by starport scaffolding # proto/tx/import

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/model/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateModel(MsgCreateModel) returns (MsgCreateModelResponse);
  rpc UpdateModel(MsgUpdateModel) returns (MsgUpdateModelResponse);
  rpc DeleteModel(MsgDeleteModel) returns (MsgDeleteModelResponse);
  rpc CreateModelVersion(MsgCreateModelVersion) returns (MsgCreateModelVersionResponse);
  rpc UpdateModelVersion(MsgUpdateModelVersion) returns (MsgUpdateModelVersionResponse);
  rpc DeleteModelVersion(MsgDeleteModelVersion) returns (MsgDeleteModelVersionResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateModel {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];

  int32 deviceTypeId = 4 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
  string productName = 5 [(gogoproto.moretags) = "validate:\"required,max=128\""];
  string productLabel = 6 [(gogoproto.moretags) = "validate:\"max=256\""];
  string partNumber = 7 [(gogoproto.moretags) = "validate:\"max=32\""];
  int32 commissioningCustomFlow = 8 [(gogoproto.moretags) = "validate:\"gte=0,lte=2\""];
  string commissioningCustomFlowUrl = 9 [(gogoproto.moretags) = "validate:\"required_if=CommissioningCustomFlow 2,omitempty,url,startsnotwith=http:,max=256\""];
  uint32 commissioningModeInitialStepsHint = 10;
  string commissioningModeInitialStepsInstruction = 11 [(gogoproto.moretags) = "validate:\"max=1024\""];
  uint32 commissioningModeSecondaryStepsHint = 12;
  string commissioningModeSecondaryStepsInstruction = 13 [(gogoproto.moretags) = "validate:\"max=1024\""];
  string userManualUrl = 14 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string supportUrl = 15 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string productUrl = 16 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string lsfUrl = 17 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
}
message MsgCreateModelResponse {}

message MsgUpdateModel {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];

  string productName = 4 [(gogoproto.moretags) = "validate:\"max=128\""];
  string productLabel = 5 [(gogoproto.moretags) = "validate:\"max=256\""];
  string partNumber = 6 [(gogoproto.moretags) = "validate:\"max=32\""];
  string commissioningCustomFlowUrl = 7 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string commissioningModeInitialStepsInstruction = 8 [(gogoproto.moretags) = "validate:\"max=1024\""];
  string commissioningModeSecondaryStepsInstruction = 9 [(gogoproto.moretags) = "validate:\"max=1024\""];
  string userManualUrl = 10 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string supportUrl = 11 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string productUrl = 12 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  string lsfUrl = 13 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  int32 lsfRevision = 14 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];  
}
message MsgUpdateModelResponse {}

message MsgDeleteModel {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
}
message MsgDeleteModelResponse {}

message MsgCreateModelVersion {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;

  string softwareVersionString = 5 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  int32 cdVersionNumber = 6 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
  string firmwareInformation = 7 [(gogoproto.moretags) = "validate:\"max=512\""];
  bool softwareVersionValid = 8;
  string otaUrl = 9 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  uint64 otaFileSize = 10 [(gogoproto.moretags) = "validate:\"required_with=OtaUrl\""];
  string otaChecksum = 11 [(gogoproto.moretags) = "validate:\"required_with=OtaUrl,max=64\""];
  int32 otaChecksumType = 12 [(gogoproto.moretags) = "validate:\"required_with=OtaUrl,gte=0,lte=65535\""];
  uint32 minApplicableSoftwareVersion = 13;
  uint32 maxApplicableSoftwareVersion = 14 [(gogoproto.moretags) = "validate:\"gtecsfield=MinApplicableSoftwareVersion\""];
  string releaseNotesUrl = 15 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
}
message MsgCreateModelVersionResponse {}

message MsgUpdateModelVersion {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;

  bool softwareVersionValid = 5;
  string otaUrl = 6 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  uint32 minApplicableSoftwareVersion = 7;
  uint32 maxApplicableSoftwareVersion = 8 [(gogoproto.moretags) = "validate:\"omitempty,gtecsfield=MinApplicableSoftwareVersion\""];
  string releaseNotesUrl = 9 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  uint64 otaFileSize = 10;
  string otaChecksum = 11 [(gogoproto.moretags) = "validate:\"max=64\""];
}
message MsgUpdateModelVersionResponse {}

message MsgDeleteModelVersion {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;
}

message MsgDeleteModelVersionResponse {
}

// this line is used by starport scaffolding # proto/tx/message