syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.model;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/model/types";

message ModelVersions {
  int32 vid = 1; 
  int32 pid = 2; 
  repeated uint32 softwareVersions = 3;
  uint32 schemaVersion = 4;
}

